Edited JS To fix visibility

--- a/docs/interface.css
+++ b/docs/interface.css
@@ -25,6 +25,10 @@ form{
 
 }
 
+#gamePlayer, #gamePosition{
+  display:none;
+}
+
 input, form {
  font-size: 20pt;
 }
